# Eleanor

./: .env.example  .env.ova.template  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  cliff.toml  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.tools.yml  docker-compose.yml  release-notes.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  ova-release.yml  release.yml  update-portal.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_parsing_jobs.py  002_add_saved_graphs.py  003_add_correlation_states.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  websocket.py
backend/app/adapters/: __init__.py  base.py  registry.py
backend/app/adapters/crowdstrike/: __init__.py  adapter.py
backend/app/adapters/defender/: __init__.py  adapter.py  schemas.py
backend/app/adapters/iris/: __init__.py  adapter.py  schemas.py
backend/app/adapters/jira/: __init__.py  adapter.py
backend/app/adapters/misp/: __init__.py  adapter.py
backend/app/adapters/okta/: __init__.py  adapter.py
backend/app/adapters/opencti/: __init__.py  adapter.py  schemas.py
backend/app/adapters/sentinel/: __init__.py  adapter.py  schemas.py
backend/app/adapters/shuffle/: __init__.py  adapter.py  schemas.py
backend/app/adapters/splunk/: __init__.py  adapter.py
backend/app/adapters/storage/: __init__.py  azure.py  base.py  gcs.py  local.py  s3.py
backend/app/adapters/thehive/: __init__.py  case_adapter.py  cortex_adapter.py
backend/app/adapters/timesketch/: __init__.py  adapter.py  schemas.py
backend/app/adapters/velociraptor/: __init__.py  adapter.py  schemas.py
backend/app/api/v1/: __init__.py  admin.py  alerts.py  analytics.py  auth.py  cases.py  collection.py  connectors.py  enrichment.py  entities.py  events.py  evidence.py  graphs.py  integrations.py  mitre.py  notifications.py  parsing.py  playbooks.py  rbac.py  realtime.py  response.py  rule_builder.py  search.py  tenants.py  workbooks.py  workflows.py  ws.py
backend/app/auth/: __init__.py
backend/app/connectors/: __init__.py  aws_securityhub.py  azure_eventhub.py  base.py  fluentd.py  gcp.py  wef.py
backend/app/core/: __init__.py  tenant_context.py
backend/app/detection/: __init__.py  sigma_engine.py  yara_scanner.py
backend/app/enrichment/: __init__.py  pipeline.py
backend/app/enrichment/extractors/: __init__.py  ioc.py
backend/app/enrichment/providers/: __init__.py  misp.py  opencti.py  virustotal.py
backend/app/middleware/: __init__.py  audit.py  rate_limit.py  tenant.py
backend/app/models/: __init__.py  alert.py  analytics.py  audit.py  case.py  compat.py  connector.py  evidence.py  graph.py  notification.py  parsing_job.py  playbook.py  rbac.py  response_action.py  tenant.py  user.py  workbook.py
backend/app/notifications/channels/: __init__.py  base.py  slack.py  teams.py
backend/app/parsers/: __init__.py  base.py  registry.py
backend/app/parsers/formats/: __init__.py  amcache.py  asff.py  browser_chrome.py  browser_edge.py  browser_firefox.py  browser_sqlite_base.py  cef.py  crowdstrike_fdr.py  dissect_adapter.py  evtx.py  gcp_audit.py  json.py  jumplist.py  linux_auth.py  linux_syslog.py  lnk.py  memory.py  mft.py  okta.py  osquery.py  pcap.py  prefetch.py  recyclebin.py  registry_hive.py  remoteaccess.py  scheduled_tasks.py  shimcache.py  srum.py  ssh.py  suricata.py  userassist.py  usn_journal.py  webserver.py  zeek.py
backend/app/parsers/normalizers/: __init__.py  ecs.py
backend/app/processors/: __init__.py  base.py  runner.py
backend/app/processors/builtin/: __init__.py  auto_enrich.py
backend/app/schemas/: rule_builder.py
backend/app/services/: __init__.py  action_executor.py  alert_generator.py  audit.py  correlation_engine.py  dashboard_stats.py  detection_engine.py  event_buffer.py  graph_builder.py  mitre_service.py  playbook_engine.py  realtime_processor.py  rule_validator.py
backend/app/tasks/: __init__.py  _parsing_impl.py  celery_app.py  enrichment.py  indexing.py  parsing.py
backend/app/utils/: password.py
backend/tests/: __init__.py  conftest.py  factories.py
backend/tests/e2e/: __init__.py  test_evidence_chain.py  test_incident_workflow.py  test_threat_hunt.py
backend/tests/health/: __init__.py  test_services.py
backend/tests/integration/: __init__.py  test_api_smoke.py  test_elasticsearch.py  test_iris.py  test_opencti.py  test_shuffle.py  test_timesketch.py  test_velociraptor.py
backend/tests/mocks/: __init__.py  iris.py  opencti.py  shuffle.py  timesketch.py  velociraptor.py
backend/tests/unit/: __init__.py  test_analytics.py  test_auth.py  test_cases.py  test_entities.py  test_evidence.py  test_search.py  test_workflows.py
backend/tests/unit/parsers/: __init__.py  conftest.py  test_browser_chrome_parser.py  test_evtx_parser.py  test_json_parser.py  test_prefetch_parser.py  test_registry_parser.py
backend/tests/unit/tasks/: conftest.py  test_parsing_tasks.py
config/timesketch/: timesketch.conf
config/velociraptor/: server.config.yaml
deploy/docker/: init-db.sql
deploy/kubernetes/: README.md  deploy.sh
deploy/nginx/: nginx.prod.conf
docker/iris/: generate-certs.sh  (+1 more)
docs/: API_REFERENCE.md  CONFIGURATION.md  PARSER_DEVELOPMENT.md  PRODUCTION.md  QUICKSTART.md  SETUP.md  TROUBLESHOOTING.md  adapters.md  installation-docker.md  installation-kubernetes.md  installation-ova.md  quickstart.md
frontend/: Dockerfile  Dockerfile.dev  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend-releases/: README.md  angular.json  package-lock.json  package.json
ova/: eleanor.pkr.hcl  vsphere.pkrvars.hcl.example
scripts/: backup.sh  first-run-setup.sh  generate-certs.sh  generate-secrets.sh  health-check.sh  reset-admin-password.sh  restore.sh  security-hardening.sh  verify-implementation.sh
(+236 files in other folders)
