[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eleanor"
version = "0.1.0"
description = "Open-source DFIR platform with Sentinel-style UI and built-in case management"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Eleanor Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "elasticsearch[async]>=8.12.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.1",
    "httpx>=0.26.0",
    "python-ldap>=3.4.4",
    "authlib>=1.3.0",
    "aiofiles>=23.2.1",
    "python-magic>=0.4.27",
    "grpcio>=1.60.0",
    "pyvelociraptor>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/eleanor-dfir/eleanor"
Documentation = "https://github.com/eleanor-dfir/eleanor/docs"
Repository = "https://github.com/eleanor-dfir/eleanor"
Issues = "https://github.com/eleanor-dfir/eleanor/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
